--- a/app/src/main/res/layout/activity_trips.xml
+++ b/app/src/main/res/layout/activity_trips.xml
@@ -22,18 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_trips"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-
-            <TextView
-                android:id="@+id/tv_users_search_results_json"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Make a search!"
-                android:textSize="18sp" />
-        </ScrollView>
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/tv_error_message_display"
