--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,13 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/login"
+        android:text="@string/sample_login"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/tv_mobile_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mobile_number" />
+        android:text="@string/sample_mobile_number" />
 
 </LinearLayout>
