--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,8 +5,14 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:title="@string/home" />
+        <item
             android:id="@+id/nav_trips"
-            android:title="@string/orders" />
+            android:title="@string/your_trips" />
+        <item
+            android:id="@+id/nav_payment"
+            android:title="@string/payment" />
     </group>
 
     <item android:title="@string/other">
